<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_layout"
            android:orientation="vertical" >

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyAppTheme">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/my_toolbar"
                    app:navigationIcon="@mipmap/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="top"
                    android:background="@drawable/main_header_selector"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                    android:theme="@style/MyToolBar"/>
            </android.support.design.widget.AppBarLayout>

            <TextView
                style="@style/ContentText"
                android:id="@+id/author"
                android:textColor="@color/colorSecondary_text"
                android:textSize="@dimen/caption_text_size"
                android:text="@string/by_user" />

            <TextView
                style="@style/ContentText"
                android:id="@+id/tv_author"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary_text"
                tools:text="@string/user_name" />

            <ImageView
                android:id="@+id/pano_view_line"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/main_header_selector"/>

            <ImageView
                android:id="@+id/imgv_photo_large"
                android:layout_margin="5dip"
                android:layout_width="match_parent"
                android:layout_height="250dip"/>

            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/colorDivider"/>

            <TextView
                style="@style/ContentText"
                android:id="@+id/description"
                android:textColor="@color/colorSecondary_text"
                android:textSize="@dimen/caption_text_size"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tv_photo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textColor="@color/colorPrimary_text"
                android:textSize="@dimen/paragragh_text_size"
                tools:text="@string/paragraph1" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="right"
                android:text="Delete" />

        </LinearLayout>
    </ScrollView>

</layout>
