<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="boolean"/>
    </data>


    <FrameLayout
        android:id="@+id/composer_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorTitle"
        android:clickable="true"
        tools:ignore="Orientation">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyAppTheme">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                app:navigationIcon="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:background="@drawable/main_header_selector"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:theme="@style/MyToolBar"/>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/imgv_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:layout_marginTop="?attr/actionBarSize"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_a_description"
            android:textSize="@dimen/caption_text_size"
            android:textColor="@color/colorSecondary_text"/>

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="60dp"
            android:background="@color/colorPrimaryLight"
            android:inputType=""
            android:maxLength="120"
            tools:text="@string/paragraph2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            >

            <ImageButton
                android:id="@+id/photoPickerButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@android:drawable/ic_menu_gallery"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="photo picker button" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:enabled="false"
                android:text="@string/send_button_label"/>


        </RelativeLayout>


        <ProgressBar
            android:id="@+id/progressBarInComposer"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/progressBar"
            android:indeterminateTintMode="src_in"
            app:visibleGone="@{isLoading}"
            />

    </FrameLayout>
</layout>


    <!--
    android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"


        <ImageButton
            android:id="@+id/photoPickerButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@android:drawable/ic_menu_gallery"
            android:contentDescription="photo picker button" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"

            android:background="@color/colorAccent"
            android:inputType=""
            tools:text="@string/loading_messages"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:enabled="false"
            android:text="SEND"/>
    -->